kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cip-service
spec:
  internalTrafficPolicy: Cluster
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: my-site
  sessionAffinity: None
  type: ClusterIP
